<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/capitanPrimary"
    tools:context=".frag.ProfileFragment">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/profile_title_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/title"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/profile_company_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/company"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/profile_type_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/type"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/profile_company_logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                tools:src="@tools:sample/avatars" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical">

                <TextView
                    android:id="@+id/profile_description_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/description"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </ScrollView>

            <TextView
                android:id="@+id/profile_created_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/created_at"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/profile_location_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/location_view"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/see_company_site"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/company_info"
                android:gravity="center"
                android:layout_gravity="center" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>