<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="5dp"
    app:cardElevation="3dp"
    android:layout_width="340dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_centerInParent="true"
    android:layout_margin="8dp"
    android:background="@android:color/white"
    android:foregroundGravity="center">

    <LinearLayout
        android:id="@+id/job_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/job_title_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:text="Job title"
            android:shadowColor="@android:color/black"
            android:shadowRadius="1"
            android:shadowDy="1"
            android:shadowDx="1"
            android:textColor="@color/capitanPrimeText"
            android:textSize="18sp"
            android:background="@color/capitanGray"
            android:fontFamily="@font/comfortaa"
            />

        <TextView
            android:id="@+id/company_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/company_name"
            android:shadowColor="@android:color/black"
            android:textSize="16sp"
            android:fontFamily="@font/comfortaa"
            android:shadowRadius="1"
            android:shadowDy="1"
            android:shadowDx="1"
            android:textColor="@color/capitanPrimeText"
            android:background="@color/capitanGray"/>

        <ImageView
            android:id="@+id/company_logo_imageview"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:contentDescription="@string/company_logo"
            tools:srcCompat="@tools:sample/avatars[6]"
            />

        <TextView
            android:id="@+id/location_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/location_view"
            android:textSize="15sp"
            android:shadowColor="@android:color/black"
            android:shadowRadius="1"
            android:shadowDy="1"
            android:shadowDx="1"
            android:textColor="@color/capitanPrimeText"
            android:background="@color/capitanGray"
            android:fontFamily="@font/comfortaa"
            />

        <TextView
            android:id="@+id/created_at_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/created_at"
            android:textColor="@color/capitanPrimeText"
            android:textSize="15sp"
            android:shadowColor="@android:color/black"
            android:shadowRadius="1"
            android:shadowDy="1"
            android:shadowDx="1"
            android:background="@color/capitanGray"
            android:fontFamily="@font/comfortaa"
            />

        <TextView
            android:id="@+id/type_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/type"
            android:textSize="15sp"
            android:shadowColor="@android:color/black"
            android:shadowRadius="1"
            android:shadowDy="1"
            android:shadowDx="1"
            android:textColor="@color/capitanPrimeText"
            android:background="@color/capitanGray"
            android:fontFamily="@font/comfortaa"
            />

    </LinearLayout>


</android.support.v7.widget.CardView>